View Issue Details

IDProjectCategoryView StatusLast Update
0023480Open CASCADEOCCT:Modeling Algorithmspublic2012-11-16 13:18
ReporterabvAssigned Toabv 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2008 
Product Version6.5.4 
Target Version6.5.4Fixed in Version6.5.4 
Summary0023480: New compiler warnings on MS VC 9
DescriptionNew compiler warnings appeared after recent integrations, as reported by MS VC++ 9.0:

BRepTest_OtherCommands.cxx:437 warning C4101: 'sbf' : unreferenced local variable
IntTools_Context.cxx:150 warning C4101: 'aVMin' : unreferenced local variable
IntTools_Context.cxx:150 warning C4101: 'aVMax' : unreferenced local variable
IntTools_Context.cxx:150 warning C4101: 'aUMin' : unreferenced local variable
IntTools_Context.cxx:150 warning C4101: 'aUMax' : unreferenced local variable
IntTools_BeanBeanIntersector.cxx:1224 warning C4101: 'aTmin' : unreferenced local variable
TagsNo tags attached.
Test case numberNot needed

Activities

abv

2012-10-22 20:24

manager   ~0021884

Fix submitted to branch CR23480, please review

jgv

2012-10-23 15:31

developer   ~0021902

No remarks

apn

2012-10-26 14:52

administrator   ~0021970

Dear BugMaster,
Branch CR23480 (and products from GIT master) was compiled on Linux and Windows platforms and tested.

Regressions:
Not detected

Improvements:
Not detected

Testing cases:
Not needed

Related Changesets

occt: master b9736bcc

2012-10-22 03:08:44

abv


Committer: abv Details Diff
0023480: New compiler warnings on MS VC 9

Unused local variables eliminated
Affected Issues
0023480
mod - src/BRepTest/BRepTest_OtherCommands.cxx Diff File
mod - src/IntTools/IntTools_BeanBeanIntersector.cxx Diff File
mod - src/IntTools/IntTools_Context.cxx Diff File

Issue History

Date Modified Username Field Change
2012-10-22 07:02 abv New Issue
2012-10-22 07:02 abv Assigned To => jgv
2012-10-22 20:24 abv Note Added: 0021884
2012-10-22 20:24 abv Status new => resolved
2012-10-23 15:31 jgv Note Added: 0021902
2012-10-23 15:31 jgv Status resolved => reviewed
2012-10-23 16:21 mkv Assigned To jgv => mkv
2012-10-26 14:52 apn Note Added: 0021970
2012-10-26 14:53 apn Test case number => Not needed
2012-10-26 14:53 apn Assigned To mkv => bugmaster
2012-10-26 14:53 apn Status reviewed => tested
2012-10-29 12:54 abv Changeset attached => occt master b9736bcc
2012-10-29 12:54 abv Assigned To bugmaster => abv
2012-10-29 12:54 abv Status tested => verified
2012-10-29 12:54 abv Resolution open => fixed
2012-11-16 13:13 bugmaster Fixed in Version => 6.5.4
2012-11-16 13:18 bugmaster Status verified => closed