0023480: New compiler warnings on MS VC 9

Unused local variables eliminated